--- a/gtk/Makefile.am
+++ b/gtk/Makefile.am
@@ -1007,7 +1007,9 @@ Gtk_2_0_gir_MSVC_EXPORT_PACKAGES = $(Gtk_2_0_gir_EXPORT_PACKAGES)
 Gtk_2_0_gir_MSVC_INCLUDE_GIRS = Atk-1.0
 Gtk_2_0_gir_MSVC_LIBS = gtk-win32-2.0 gdk-win32-2.0
 Gtk_2_0_gir_MSVC_CFLAGS = $(GTK_MSVC_GIR_CFLAGS)
-Gtk_2_0_gir_MSVC_SCANNERFLAGS = --warn-all --add-include-path=. --include-uninstalled=./Gdk-2.0.gir
+Gtk_2_0_gir_MSVC_SCANNERFLAGS =	\
+	--warn-all	\
+	--include-uninstalled='./vs$$$$(VSVER)/$$$$(CFG)/$$$$(PLAT)/bin/Gdk-2.0.gir'
 
 include $(top_srcdir)/build/Makefile.msvc-introspection
 
